--- a/index.html
+++ b/index.html
@@ -4,46 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Walcart Ecommerce</title>
 </head>
 <body>
     <header>
-        <section class="header-top">
+        <section class="header_top">
             <div class="logo">
-                <h3>WalCart</h3>
+                <a href=""><img src="img/logo.png" alt="Logo"></a>
             </div>
-            <div class="right-info">
-                <div class="shop-info">
-                    <p>Call 08-0000-16267 <span>Support 24/7</span></p>
+            <div class="right_info">
+                <div class="support_info">
+                    <a href="tel:08-0000-16267">Call 08-0000-16267</a>
+                    <span>Support 24/7</span>
                 </div>
-                <div class="search">
-                    <p><i class="fa-solid fa-magnifying-glass"></i> Search</p>
-                </div>
-                <div class="cart">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                </div>
-                <button class="sign-in">Signin</button>
+                <button class="search">
+                    <i class="fa-solid fa-magnifying-glass"></i> Search
+                </button>
+                <button class="wishlist">
+                    <i class="fa-solid fa-heart-circle-plus"></i>
+                </button>
+                <button class="cart">
+                    <i class="fa-solid fa-cart-plus"></i>
+                </button>
+                <button>Sign In</button>
             </div>
         </section>
-        <section>
-          <div>
-              <h3><i class="fa-solid fa-list"></i> Catlog</h3>
-          </div>
-          <div>
-              <nav>
-                  <ul>
-                      <li><a href="">Shop Address</a></li>
-                      <li><a href="">Order status</a></li>
-                      <li><a href="">Feedback</a></li>
-                      <li><a href="">How to pay and receive</a></li>
-                  </ul>
-              </nav>
-          </div>
-          <div>
-              <a href="">To buyers</a>
-          </div>
-        </section>
+        
     </header>
 </body>
 </html>
