--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                     <a href="tel:08-0000-16267">Call 08-0000-16267</a>
                     <span>Support 24/7</span>
                 </div>
-                <button class="search">
+                <button type="button" class="search">
                     <i class="fa-solid fa-magnifying-glass"></i> Search
                 </button>
-                <button class="wishlist">
+                <button type="button" class="wishlist">
                     <i class="fa-solid fa-heart-circle-plus"></i>
                 </button>
-                <button class="cart">
+                <button type="button" class="cart">
                     <i class="fa-solid fa-cart-plus"></i>
                 </button>
                 <button>Sign In</button>
