--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
                     <a href="tel:08-0000-16267">Call 08-0000-16267</a>
                     <span>Support 24/7</span>
                 </div>
-                <button class="search">
+                <button class="search" aria-lebel="Search">
                     <i class="fa-solid fa-magnifying-glass"></i> Search
                 </button>
-                <button class="wishlist">
+                <button class="wishlist" aria-lebel="Wishlist">
                     <i class="fa-solid fa-heart-circle-plus"></i>
                 </button>
-                <button class="cart">
+                <button class="cart" aria-lebel="Add Cart">
                     <i class="fa-solid fa-cart-plus"></i>
                 </button>
-                <button>Sign In</button>
+                <button aria-lebel="Sign In">Sign In</button>
             </div>
         </section>
         
