--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <button class="search" aria-lebel="Search">
                     <i class="fa-solid fa-magnifying-glass"></i> Search
                 </button>
-                <button class="wishlist" aria-lebel="Wishlist">
+                <button class="wishlist" aria-lebel="wishlist">
                     <i class="fa-solid fa-heart-circle-plus"></i>
                 </button>
-                <button class="cart" aria-lebel="Add Cart">
+                <button class="cart" aria-lebel="cart">
                     <i class="fa-solid fa-cart-plus"></i>
                 </button>
                 <button aria-lebel="Sign In">Sign In</button>
