--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="tel:08-0000-16267">Call 08-0000-16267</a>
                     <span>Support 24/7</span>
                 </div>
-                <button class="search" aria-label="Search">
+                <button class="search" aria-label="search">
                     <i class="fa-solid fa-magnifying-glass"></i> Search
                 </button>
                 <button class="wishlist" aria-label="wishlist">
