--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <section class="header_top">
             <div class="logo">
-                <a href=""><img width="100" height="100" src="img/logo.png" alt="Logo"></a>
+                <a href="/index.html"><img width="100" height="100" src="img/logo.png" alt="Logo"></a>
             </div>
             <div class="right_info">
                 <div class="support_info">
